@@ -1,5 +1,11 @@
 2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 04279] charset
+	* libwc/ces.h, libwc/charset.c: set charset to Shift_JIS, when locale 
+	  is japanese, jp_JP.PCK, ja_JP.IBM-932, ja_JP.IBM-943, or windows-31j.
+
+2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 04278] Re: segfault on CentOS4.5/libgc6.8
 	* term.c: add handling xterm-incompatible terminals without gpm.
 
